fit_predictor/mkp_aco/evaluates/run15/2025-01-27_13-07-27/evaluations/problem_eval4544786531180823469_stdout.txt
Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "E:\Projects\CO\reevo-main\problems\mkp_aco\gpt.py", line 1
    importance of the prize and weight.
               ^^
SyntaxError: invalid syntax
